--- a/hugo/public/index.html
+++ b/hugo/public/index.html
@@ -25,6 +25,13 @@
   <link rel="stylesheet" href="/css/style.min.aad43d4ecb69a264f2539b89d7f779d5f3cdff22e7585fe5fc3c77272f1c2696.css">
   
 
+
+  
+  
+  <link rel="stylesheet" href="/css/custom.min.c74e01685bb909b7d6a2aeb24e8cdb62228d54cea521f29a447f9ccd80673cde.css">
+  
+
+
   
 
 </head>
@@ -134,13 +141,14 @@
       <div class="col-12">
         <div class="sub-footer-inner">
           <ul>
-            <li class="zerostatic"><a href="https://www.zerostatic.io">www.zerostatic.io</a></li>
+            <li class="zerostatic">Design based on Whisper by <a href="https://www.zerostatic.io">www.zerostatic.io</a>.</li>
           </ul>
         </div>
       </div>
     </div>
   </div>
 </div>
+
 
   
 
